fix(ui): decrease gap for auth page

--- a/packages/ui/src/assets/css/auth-page.css
+++ b/packages/ui/src/assets/css/auth-page.css
@@ -12,9 +12,13 @@
 .dz-auth-page > .dz-auth-page-content {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
   max-width: 430px;
   width: 100%;
+}
+
+.dz-auth-page > .dz-auth-page-content > .message {
+  margin-bottom: 1rem;
 }
 
 .dz-auth-page > .dz-auth-page-content > .auth-links {
