--- a/packages/user/src/assets/css/login.css
+++ b/packages/user/src/assets/css/login.css
@@ -1,5 +1,5 @@
 .login .social-login-wrapper {
   display: flex;
   flex-direction: column;
-  gap: .5rem;
+  gap: 0.5rem;
 }
